src/objects/rs_Search__c.object
<CustomObject>
    <fields>
        <fullName>Filter_Logic__c</fullName>
        <description>Filter logic for advanced searching e.g. 1 AND 2</description>
        <label>Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overflow_Fields_2__c</fullName>
        <description>For Exporting Excel, another field to hold data</description>
        <label>Overflow Field 2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overflow_Fields_3__c</fullName>
        <description>For Exporting Excel, another field to hold data</description>
        <label>Overflow Field 3</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overflow_Fields_4__c</fullName>
        <description>For Exporting Excel, another field to hold data</description>
        <label>Overflow Field 4</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overflow_Fields__c</fullName>
        <description>For Exporting Excel, another field to hold data</description>
        <label>Overflow Field</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PR_Team_Employee_Fields__c</fullName>
        <description>Condition list for the PR Team Employee fields</description>
        <label>PR Team Employee Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Result_Fields__c</fullName>
        <description>The columns that should appear in the result table</description>
        <label>Result Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Search_Fields__c</fullName>
        <label>Search Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Search_Type__c</fullName>
        <label>Search Type</label>
        <picklist>
            <picklistValues>
                <fullName>Basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Fields__c</fullName>
        <description>The values for the user fields search</description>
        <label>User Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that created the Search view</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Search</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Search Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Search</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>